gitops/apps/rhcl-demo/base/resources/gateway/ai-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: rhcl-ai-gw
  namespace: openshift-ingress
  labels:
    kuadrant.io/gateway: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  gatewayClassName: openshift-default
  listeners:
    - name: https-ai
      port: 443
      protocol: HTTPS
      hostname: REPLACE_ME_AI_HOSTNAME
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: cert-manager-ingress-cert
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              rhcl.demo/gateway-access: ai
