gitops/apps/rhcl-demo/base/resources/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: rhcl-gw
  namespace: openshift-ingress
  labels:
    kuadrant.io/gateway: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https-main
      port: 443
      protocol: HTTPS
      hostname: REPLACE_ME_DEMO_HOSTNAME
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: cert-manager-ingress-cert
      allowedRoutes:
        namespaces:
          from: All
    - name: https-oidc
      port: 443
      protocol: HTTPS
      hostname: REPLACE_ME_OIDC_HOSTNAME
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: cert-manager-ingress-cert
      allowedRoutes:
        namespaces:
          from: All
    - name: https-main-public
      port: 443
      protocol: HTTPS
      hostname: rhcl-workshop.REPLACE_ME_BASE_DOMAIN
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: rhcl-gw-public-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-oidc-public
      port: 443
      protocol: HTTPS
      hostname: oidc-rhcl-workshop.REPLACE_ME_BASE_DOMAIN
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: rhcl-gw-public-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-external-public
      port: 443
      protocol: HTTPS
      hostname: external-api.REPLACE_ME_BASE_DOMAIN
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: rhcl-gw-public-tls
      allowedRoutes:
        namespaces:
          from: All
