gitops/apps/rhcl-demo/base/resources/gateway/route-passthrough.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rhcl-gw
  namespace: openshift-ingress
  annotations:
    argocd.argoproj.io/sync-wave: "24"
spec:
  host: REPLACE_ME_DEMO_HOSTNAME
  to:
    kind: Service
    name: rhcl-gw-istio
  port:
    targetPort: 443
  tls:
    termination: passthrough
